--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,6 @@
-JWT_SECRET = secret key
-PORT = 5000
-MONGODB_URL = mongodb+srv://ananthan:ananthan@collegexp.zoxom.mongodb.net/?retryWrites=true&w=majority&appName=CollegeXP
+MONGODB_URL=''
+JWT_SECRET=''
+PORT='5000'
+EMAIL_USER=''
+EMAIL_PASS='(App generated password)'
+MY_SECRET_KEY='(secret key for admin signup)'
